# game-of-the-amazons-ai

./: pyproject.toml
docs/: index.rst  usage.rst
