[project]
name = "game-of-the-amazons-ai"
version = "0.1.0"
description = "Inteligencia artificial para el Juego de las Amazonas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pyright",
    "pytest",
    "sphinx",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pyright]
include = ["amazons", "ui", "assets", "main.py"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
